# url-shortner

./: .dockerignore  AI_LOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  deps.py  main.py  utils.py
app/core/: cache.py  exceptions.py
app/db/: postgres.py  redis.py
app/models/: __init__.py  click.py  link.py
app/router/: __init__.py  health.py  links.py  redirect.py
app/schemas/: health.py  link.py
app/services/: click.py  link.py
app/static/: app.js  index.html  style.css
app/templates/: base.html  not-found.html
tests/: conftest.py  test_health.py  test_link_detail.py  test_links.py  test_redirect.py
