[project]
name = "url-shortner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [ "E", "F", "I", "B", "UP" ]

ignore = [ "E501", "UP017", "B008", "UP042" ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
