[project]
name = "url-shortner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.2",
]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "fastlimit>=0.1.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "redis>=8.0.1",
    "ruff>=0.15.22",
    "shortuuid>=1.0.13",
    "sqlalchemy[asyncio]>=2.0.51",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [ "E", "F", "I", "B", "UP" ]

ignore = [ "E501", "UP017", "B008", "UP042" ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
